--- a/src/app/content/content.component.css
+++ b/src/app/content/content.component.css
@@ -1,17 +1,16 @@
-body, html {
-  height: 100%;
-}
 
-/* The hero image */
 .imgContainer {
   position: relative;
   max-height: 800rem; /* Maximum width */
   margin: 0 auto; /* Center it */
 }
-
+.large-image{
+  width: 80%;
+  height: 10%;
+}
 .text-block {
   position: absolute;
-  top: 50%;
+  top: 60%;
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: rgba(0, 0, 0, 0.527);
@@ -19,11 +18,46 @@ body, html {
   padding: 2rem;
   text-align: center;
 }
+.content-and-slider{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  display: flex;
+  width: 99vw;
+  height: 60vh;
+  background-color: rgb(249, 245, 240);
+}
 
+.left-content{
+ padding-top: 2rem;
+ padding-bottom: 2rem;
+  flex: 1;
+  background-color: rgb(0, 0, 0);
+  color: white;
+  /* text-align: justify; */
+}
+.right-slider {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex: 1;
+  background-color: rgb(255, 255, 255);
+}
+
+.large-image {
+  max-width: 100%;
+  max-height: auto;
+}
+
+.container1{
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
   .container{
     background-color: rgb(60, 61, 61);
     display: flex;
     flex-flow: wrap;
+    flex-grow: 1;
+
   }
   .heading {
     font-size: 7rem;
@@ -78,7 +112,7 @@ body, html {
   padding-top: 2rem;
   padding-bottom: 2rem;
   display :block;
-  background-color: rgb(243, 211, 211);
+  background-color: rgb(3, 3, 3);
 }
 
 .content{
@@ -89,28 +123,6 @@ body, html {
   display :block;
   background:rgb(250, 250, 250);
 }
-.right-slider1{
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    flex: 1;
-    background-color: rgb(245, 210, 209);
-}
-.right-slider2{
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    flex: 1;
-    background-color: rgb(246, 195, 193);
-}
-.right-slider3{
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    flex: 1;
-    background-color: rgb(247, 166, 163);
-}
-
  .img1{
     width: 90vw;
     height: 50vh;
@@ -129,9 +141,7 @@ body, html {
     width: auto;
     height: 50%;
 }
-.container {
-    flex-grow: 1;
-}
+
 
 
 .background-wrapper {
