--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -11,21 +11,84 @@
     </div>
     <div class="overlay"></div>
   </div></div>  -->
-  <div class="imgContainer">
+  <div class="text-Container">
     <img src="assets/background.jpg" alt="Notebook" style="width:100%; height:32rem;">
     <div class="text-block">
       <h1>Digital Business Review Magazine</h1>
       <p>Welcome to Digital Business Review Magazine, your premier source for insightful analysis, in-depth interviews, and cutting-edge trends in the world of digital business.</p>
     </div>
   </div>
-  <div class="text-container">
+  <div class="carouselBg">
+    <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner justify-content-center"> <!-- Add justify-content-center class here -->
+        <div class="carousel-item" *ngFor="let a of articles; let i = index" [class.active]="i === 0">
+          <img src="{{a.articleImage}}" class="d-block img1 mx-auto" alt="{{a.title}}"> 
+          <div class="carousel-caption d-none ">
+            <h5>"{{a.title}}"</h5>
+            <a href="{{a.articleImage}}" target="_blank" class="btn btn-primary">Read More</a>
+          </div>
+          <div class="carousel-caption d-none d-md-block">
+            <h5>{{a.title}}</h5>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
+  </div>
+  <div class="imgcontainer">
+    <div class="content-and-slider">
+      <div class="left-content">
+          <h1 style="text-align: center;">Latest Articles</h1>
+<div>      <p class="card-text">{{articles[0].content | slice:0:500}}..</p>
+</div>      </div>
+      <div class="right-slider">
+        <div class="widget-content px-0">
+          <div class="chart d-flex justify-content-center">
+            <img src="{{articles[0]?.articleImage}}" alt="{{articles[0]?.title}}" class="large-image" alt="Image 1">
+            <!-- <a href="{{articles[0]?.articleImage}}" target="_blank" class="btn btn-primary">Read More</a> -->
+          </div>
+        </div>
+      </div>
+      
+      
+        
+          <!-- <div id="carouselExampleAutoplaying" class="carousel slide mx-4" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="assets/pexels-erik-mclean-7524997.jpg" class="d-block w-100 img1" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="assets/pexels-erik-mclean-7524998.jpg"  class="d-block w-100 img1" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="assets/pexels-natasha-kendall-4093392.jpg"  class="d-block w-100 img1" alt="...">
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+           
+         </div> -->
+         
+      </div>
     <!-- <div class="imgContent"><img src="assets/background2.jpg"></div> -->
-    <!-- <h1 class="heading">DIGITAL BUSINESS REVIEW MAGAZINE</h1> -->
+     <!-- <h1 class="heading">DIGITAL BUSINESS REVIEW MAGAZINE</h1>  -->
   </div>
   <div class="container mb-5 mt-5">
     <div class="row mb-10 justify-content-center">
       <div class="content">
-        <img src="assets/pexels-erik-mclean-7524997.jpg" alt="xyz" style="height: 10rem;" width="100rem">
         <h1 style="text-align: center;"><b>Digital Business Review Magazine</b></h1>
         <p style="text-align: center;">Welcome to Digital Business Review Magazine, your premier source for insightful analysis, in-depth interviews, and cutting-edge trends in the world of digital business.</p>
         <h3 style="text-align: center;">Coming Soon.....</h3>
@@ -45,137 +108,33 @@
     </div>
   </div>
   
-<div class="carouselBg">
-  <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner justify-content-center"> <!-- Add justify-content-center class here -->
-      <div class="carousel-item" *ngFor="let a of articles; let i = index" [class.active]="i === 0">
-        <img src="{{a.articleImage}}" class="d-block img1 mx-auto" alt="{{a.title}}"> <!-- Add mx-auto class here -->
-        <div class="carousel-caption d-none ">
-          <h5>{{a.title}}</h5>
-          <a href="{{a.articleImage}}" target="_blank" class="btn btn-primary">Read More</a>
-        </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
-  </div>
-</div>
+
 <div>
 <div>
 </div>
-  <!-- <div class="container">
-      <div class="col-md-3 mb-10 center">
-        <div class="right-slider1 ">
-          <div id="carouselExample" class="carousel slide mx-4" data-bs-ride="carousel">
-            <div class="carousel-inner">
-            Loop through each article to create carousel items 
-              <div class="carousel-item" *ngFor="let a of articles; let i = index" [class.active]="i === 0">
-                <img src="{{a.articleImage}}" class="d-block w-40 img1" alt="{{a.title}}">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>{{a.title}}</h5>
-                   <p>{{a.content | slice:0:100}}..</p> 
-                  <a href="{{a.articleImage}}" target="_blank" class="btn btn-primary">Read More</a>
-                </div>
-              </div>
-            </div>
-             Carousel controls 
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
-        </div>
-        </div>
-      </div> -->
-  
-          <!-- <div class="carousel-item active " *ngFor="let a of articles; let i = index" [class.active]="i === 0">
-            <img src="{{a.articleImage}}" class="d-block w-40 img1" alt="{{a.title}}">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>{{a.title}}</h5>
-               <p>{{a.content | slice:0:100}}..</p> 
-              <a href="{{a.articleImage}}" target="_blank" class="btn btn-primary">Read More</a>
-            </div>
-          </div> -->
 <br>
 </div>
 
-      <!-- <div class="col-md-7 mb-10">
-    <div class="right-slider1">
-      <div id="carouselExampleAutoplaying" class="carousel slide mx-4" data-bs-ride="carousel">
-        <div class="carousel-inner"> -->
-      <!-- Loop through each article to create carousel items -->
-      <!-- <div class="carousel-item" *ngFor="let a of articles; let i = index" [class.active]="i === 0">
-            <img src="{{a.articleImage}}" class="d-block w-100 img1" alt="{{a.title}}">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>{{a.title}}</h5>
-              <p>{{a.content | slice:0:100}}..</p>
-            </div>
-          </div>
-        </div> -->
-      <!-- Carousel controls -->
-      <!-- <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
-    </div>
-  </div> -->
 
-      <!-- <img src="assets/pexels-erik-mclean-7524997.jpg" class="d-block w-100 img1" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Second slide label</h5>
-                  <p>Some representative placeholder content for the second slide.</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="assets/pexels-erik-mclean-7524998.jpg"  class="d-block w-100 img1" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="assets/pexels-natasha-kendall-4093392.jpg"  class="d-block w-100 img1" alt="...">
-              </div>
-            </div> -->
 
-      <!-- articles total details in content page -->
-      <!-- <div class="container">
+    
 
-              <div class="card" style="width: 18rem;" *ngFor="let a of articles">
-                <img src="{{a.articleImage}}"  style="height:12rem;" class="card-img-top" alt="{{a.title}}">
-                <div class="card-body">
-                  <h5 class="card-title">{{a.title | slice:0:20}}</h5>
-                  <p class="card-text">{{a.content | slice:0:100}}..</p>
-                  <a href="{{a.articleImage}}" target="_blank" class="btn btn-primary">Read More</a>
-                  <button class="btn btn-warning" (click)="deleteArticle(a._id)">Delete</button>
-                  <p></p>
-            
-                </div>
-              </div>
-            </div> -->
-      <!-- <div class="container1">
+      
+      <div class="container1">
     <div class="row justify-content-between">
-      <div class="col-md-3 mt-4 mb-5">
+      <div class="col-md-3 mt-4 mb-5" *ngFor="let a of articles; let i = index" [class.active]="i === 0">
         <div class="widget-content px-0">
           <div class="chart d-flex justify-content-center">
             <div class="image-wrapper" style="background-color: #000;">
-              <img src="assets/pexels-erik-mclean-7524997.jpg" class="img-fluid h-100" alt="Image 1">
+              <img src="{{a.articleImage}}" alt="{{a.title}}"class="img-fluid h-100" alt="Image 1">
+              <a href="{{a.articleImage}}" target="_blank" class="btn btn-primary">Read More</a>
+
             </div>
           </div>
         </div>
       </div>
-      <div class="col-md-3 mt-4 mb-4">
+      
+      <!-- <div class="col-md-3 mt-4 mb-4">
         <div class="widget-content px-0">
           <div class="chart d-flex justify-content-center">
             <div class="image-wrapper" style="background-color: #000;">
@@ -201,10 +160,6 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
-  </div> -->
-
-
-
-      <!-- <br><br><br><br><br><br><br><br><br> -->
+  </div>
