--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -15,6 +15,34 @@
         background:linear-gradient(to right,rgb(248, 249, 252),rgb(248, 249, 251));
     /* 230, 212, 212    184, 148, 148    180, 208, 241   160,277,237 */
 }
+.btn {
+    background-color: rgb(248, 249, 252);
+    color: black;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s;
+    border-radius: 1rem;
+  }
+  .btn-black {
+    background-color: black;
+    color: white;
+  }
+   .btn:hover {
+    background-color: black; /* Change background color on hover */
+  color: white; /* Change text color on hover */
+ } 
+.nav-item {
+    border-radius: 2rem;
+  }
+.nav-item.active {
+    background-color: black; /* Black color for active item */
+  }
+  
+  .nav-item.active a.nav-link {
+    background-color: black;
+    color: white; /* White color for text of active item */
+    border-radius: 1rem;
+  }
 .navbar-brand{
     margin-right: 26pt;
     padding-left: 0%;
@@ -38,20 +66,5 @@
 .smedia{
     text-size-adjust: 0.5rem;
 }
-.btn {
-    background-color: rgb(248, 249, 252);
-    color: black;
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
-    transition: background-color 0.3s, color 0.3s;
-  }
-  .btn-black {
-    background-color: black;
-    color: white;
-  }
-   .btn:hover {
-    background-color: black; /* Change background color on hover */
-  color: white; /* Change text color on hover */
- } 
+
   
