--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,35 +11,36 @@
       </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link  btn"  aria-current="page" [routerLink]="['/']">Home</a>
+        <li class="nav-item" (click)="setActive('home')" [class.active]="activeTab === 'home'">
+          <a class="nav-link btn"  [routerLink]="['/']">Home</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" (click)="setActive('articles')" [class.active]="activeTab === 'articles'">
           <a class="nav-link btn"  [routerLink]="['/articles']">Articles</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link btn"  [routerLink]="['/articles']">Magazines</a>
+        <li class="nav-item" (click)="setActive('magazines')" [class.active]="activeTab === 'magazines'">
+          <a class="nav-link btn"  [routerLink]="['/magazines']">Magazines</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link btn"  [routerLink]="['/articles']">Industry</a>
+        <li class="nav-item" (click)="setActive('industry')" [class.active]="activeTab === 'industry'">
+          <a class="nav-link btn"  [routerLink]="['/industry']">Industry</a>
         </li>
        
-        <li class="nav-item ">
-          <a class="nav-link btn" [routerLink]="['/addarticles']">Add Articles</a>
-        </li> 
+        <!-- <li class="nav-item ">
+          <a class="nav-link disabled" [routerLink]="['/addarticles']">Add Articles</a>
+        </li> -->
         <!-- <li class="nav-item">
           <a class="nav-link" [routerLink]="['/addarticles']">Add Magazines</a>
         </li> -->
-        <li class="nav-item">
+        <li class="nav-item" (click)="setActive('contactus')" [class.active]="activeTab === 'contactus'">
           <a class="nav-link btn"  [routerLink]="['/contactus']">Contact Us</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" (click)="setActive('aboutus')" [class.active]="activeTab === 'aboutus'">
           <a class="nav-link btn"  [routerLink]="['/aboutUs']">About Us</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link btn"  [routerLink]="['/login']">Login</a>
+        <li class="nav-item" >
+          <a class="nav-link btn"  [routerLink]="['/register']">Login</a>
         </li>
       </ul>
+      
       <!-- <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-danger" type="submit">Search</button>
@@ -61,7 +62,7 @@
           <img src="assets/facebook-icon.svg" alt="Bootstrap" width="30" height="24">
         </a>
         <a class="navbar-brand" href="https://twitter.com/?lang=en" target="_blank">
-          <img src="assets/icons8-twitter.svg" alt="Bootstrap" width="30" height="24">
+          <img src="assets/twitter-icon.webp" alt="Bootstrap" width="25" height="22">
         </a>
         <a class="navbar-brand" href="https://www.instagram.com/" target="_blank">
           <img src="assets/icons8-instagram.svg" alt="Bootstrap" width="30" height="24">
