--- a/src/app/add-article/add-article.component.html
+++ b/src/app/add-article/add-article.component.html
@@ -7,26 +7,22 @@
 
 <div class="right-slider"> 
 
-  <div class="container mt-3 col-5">
+  <div class="container mt-5 col-5">
     <form [formGroup]="articleForm" (ngSubmit)="onSubmit()" enctype="multipart/form-data">
-      <div class="mb-3">
-        <label for="title" class="form-label">Title</label>
-        <input type="text" class="form-control" id="title" formControlName="title" placeholder="Enter article title">
+      <div class="input-group mb-3">
+        <span class="input-group-text">Title</span>
+        <input type="text" class="form-control" id="title" formControlName="title" placeholder="Enter article title" >
       </div>
-      <div class="mb-3">
-        <label for="author" class="form-label">Author</label>
+      <div class="input-group mb-3">
+        <span class="input-group-text">Author</span>
         <input type="text" class="form-control" id="author" formControlName="author" placeholder="Enter Author Name">
       </div>
-      <div class="mb-3">
-        <label for="content" class="form-label">Content</label>
+      <div class="input-group mb-3">
+        <span class="input-group-text">Content</span>
         <textarea class="form-control" id="content" formControlName="content" rows="3"></textarea>
       </div>
-      <!-- <div class="mb-3">
-        <label for="content" class="form-label">Industy</label>
-        <input class="form-control" id="industry" formControlName="industry" rows="3">
-      </div> -->
-  
-      <select class="form-select"  formControlName="industry" id="industry" aria-label="Default select example">
+      
+      <select class="form-select mb-3"  formControlName="industry" id="industry" aria-label="Default select example">
         <option selected>---Select Industry---</option>
         <option value="Service">Service</option>
         <option value="Financial">Financial</option>
@@ -35,16 +31,12 @@
   
   
       <div class="input-group mb-3">
-        <label for="file" class="form-label">File</label>
-        <input type="file" class="form-control" id="inputGroupFile01" name="articleImage" (change)="onFileSelected($event)">
+          <input type="file" class="form-control" id="inputGroupFile01" name="articleImage" (change)="onFileSelected($event)">
       </div>
-      <div class="d-grid gap-2 col-3">
-        <button class="btn btn-primary" type="submit">Submit</button>
+      <div class="d-grid gap-2 col-3" >
+        <button class="btn btn-primary"  type="submit">Submit</button>
       </div>
-      <div class="input-group mb-3">
-        <label class="input-group-text" for="inputGroupFile01">Upload</label>
-        <input type="file" class="form-control" id="inputGroupFile01">
-      </div>
+      
     </form>
   </div>
   
